2005-03-01  Sureshkumar T  <tsureshkumar@novell.com>

	* ConnectionStringsSectionHandler.cs: Added. configuration section
	handler for section "connectionStrings". This handler is a ad hoc
	solution till the new configuration API is available in mono.

2005-02-04  Sureshkumar T  <tsureshkumar@novell.com>

	* DbDataAdapter.cs (Update ()) :
	- Check for one return result set and map the values back to
	  datatable.
	- Check for output & return value parameters and update the value
	  back to mapped column
	- check for recordsAffected only after closing the reader.

2005-02-02  Sureshkumar T  <tsureshkumar@novell.com>

	* DbConnection.cs: Implement Dispose pattern.

2005-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* DbDataPermission.cs : Empty.Union(Empty) is Empty.

2005-01-14  Atsushi Enomoto  <atsushi@ximian.com>

	* DbDataPermissionAttribute.cs, PermissionHelper.cs :
	  fixed some incompatible type of exception between 2.0 and 1.x.
	* DataContainer.cs :
	  Wrap exceptions thrown by SetValue() within ArgumentException.

2004-12-10  Sureshkumar T  <tsureshkumar@novell.com>

	* DbDataAdapter.cs (BuildSchema): Add the primary key schema iff
	MissingSchemaAction is set to AddWithKey. Also, Add auto increment
	value from the source table. fixes bug #67757 and #69110.

2004-11-24  Sureshkumar T  <tsureshkumar@novell.com>

	* DbProviderSupportedClasses.cs: Added correct enum values.
	* DbConnection.cs: Missing virtual method EnlistTransaction Added.
	* DbCommand.cs: Implemented ProviderFactory base factory methods.

2004-11-22  Sureshkumar T  <tsureshkumar@novell.com>

	* DbConnectionStringBuilder.cs: Class for helping creation of db
	connection strings added.

2004-10-01  Sureshkumar T  <tsureshkumar@novell.com>

	* DbProviderFactories.cs: Implemented all the stubs. Added functionality for
	getting available provider factories and creating a specified provider factory.

	* DbProviderFactoriesConfigurationHandler.cs: Added functionality for handling